--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,3 +20,6 @@ jobs:
 
     - name: Test
       run: go test -v -tags testing ./...
+
+    - name: Benchmark
+      run: go test -run=^$ -bench=. ./...
